# simple-display

./: .gitignore  CMakeLists.txt  readme.md
docs/: CMakeLists.txt  Doxyfile.in
include/simple/display/: buffer.h  context.h  window.h
source/: CMakeLists.txt
source/display/: buffer_implementation.cpp  buffer_implementation.h  context_implementation.cpp  context_implementation.h  window_implementation.cpp  window_implementation.h
source/display/graphics/cuda/: debug_cuda.h
source/display/graphics/d3d12/: buffer_d3d12.h  debug_d3d12.h  interop_d3d12.h  interop_d3d12_cuda.h  interop_d3d12_host.h  pipeline_d3d12.h
source/display/graphics/metal/: buffer_mt.h  pipeline_mt.h
source/display/graphics/opengl/: buffer_gl.h  buffer_gl_common.h  buffer_gl_compat.h  buffer_gl_core.h  debug_gl.h  interop_gl.h  interop_gl_cuda.h  interop_gl_host.h
source/display/graphics/opengl/glad/: gl_compat_4.1.h  gl_compat_4.6.h  gl_core_4.1.h  gl_core_4.6.h
source/display/graphics/vulkan/: buffer_vk.h  debug_vk.h  interop_vk.h  interop_vk_cuda.h  interop_vk_host.h  pipeline_vk.h
source/display/platform/linux/: context_linux.cpp  context_linux_gl.cpp  context_linux_gl.h  context_linux_vk.cpp  context_linux_vk.h  window_linux.cpp
source/display/platform/macos/: context_macos.mm  context_macos_gl.h  context_macos_gl.mm  context_macos_mt.h  context_macos_mt.mm  context_macos_vk.h  context_macos_vk.mm  window_macos.mm
source/display/platform/win32/: context_win32.cpp  context_win32_dx.cpp  context_win32_dx.h  context_win32_gl.cpp  context_win32_gl.h  context_win32_vk.cpp  context_win32_vk.h  window_win32.cpp
tests/: CMakeLists.txt
tests/test_buffer/: test_buffer.cpp
tests/test_context/: cycle_colors.cu  test_context.cpp
tests/test_include/: test_include_buffer.cpp  test_include_context.cpp  test_include_window.cpp
tests/test_usage/: cycle_colors.cu  test_context.cpp  test_window.cpp
tests/test_window/: test_window.cpp
